[package]
name = "pikadick"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "yet another discord bot"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]

[dependencies]
anyhow = "1.0.58"
argh = "0.1.8"
async-rusqlite = { path = "./lib/async-rusqlite-rs", features = [ "bundled" ] }
bincode = "1.3.3"
bitflags = "1.3.2"
bytes = "1.1.0"
camino = { version = "1.0.9", features = [ "serde1" ] }
crossbeam = "0.8.1"
dashmap = "5.3.4"
deviantart = { path = "./lib/deviantart-rs", default-features = false, features = [ "rustls-tls" ] }
fml = { path = "./lib/fml-rs", default-features = false, features = [ "rustls-tls" ] }
futures = { version = "0.3.21", features = [ "std" ], default-features = false }
heim = { version = "0.1.0-rc.1", features = [ "cpu", "virt" ] }
indexmap = "1.9.1"
insta = { path = "./lib/insta-rs", default-features = false, features = [ "rustls-tls" ] }
iqdb = { path = "./lib/iqdb-rs", default-features = false, features = [ "rustls-tls" ] }
itoa = "1.0.2"
lazy_static = "1.4.0"
nekos = { path = "./lib/nekos-rs", default-features = false, features = [ "rustls-tls" ] }
once_cell = "1.12.0"
opentelemetry = { version = "0.17.0", features = [ "rt-tokio" ] }
opentelemetry-otlp = { version = "0.10.0", features = [ "tls", "tls-roots" ] }
parking_lot = "0.12.1"
pikadick-slash-framework = { path = "./lib/pikadick-slash-framework-rs"}
pikadick-util = { path = "./lib/pikadick-util-rs", features = [ "download_to_file", "arc_anyhow_error", "async_lock_file", "drop_remove_file" ] }
pikadick-system-info = { path = "./lib/pikadick-system-info-rs" }
quizizz = { path = "./lib/quizizz-rs", default-features = false, features = [ "rustls-tls" ] }
r6stats = { path = "./lib/r6stats-rs", default-features = false, features = [ "rustls-tls" ] }
r6tracker = { path = "./lib/r6tracker-rs", default-features = false, features = [ "rustls-tls" ] }
rand = "0.8.5"
reddit = { git = "https://github.com/nathaniel-daniel/reddit-rs", features = [ "force-rustls-tls" ] }
reddit-tube = { path = "./lib/reddit-tube-rs", default-features = false, features = [ "rustls-tls" ] }
regex = "1.5.6"
reqwest = { version = "0.11.11", default-features = false }
rule34 = { path = "./lib/rule34-rs", default-features = false, features = [ "rustls-tls" ] }
rusqlite = { version = "0.27.0", features = [ "bundled", "blob", "trace" ] }
ryu = "1.0.10"
sauce-nao = { path = "./lib/sauce-nao-rs", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0.137", features = [ "derive" ] }
serenity = { version = "0.11.2", features = [ "client", "standard_framework", "rustls_backend", "voice", "cache", "unstable_discord_api" ], default-features = false }
shift-orcz = { git = "https://github.com/adumbidiot/shift-client-rs", default-features = false, features = [ "rustls-tls" ] } 
songbird = "0.2.2"
systemstat = "0.1.11"
thiserror = "1.0.31"
tic-tac-toe = { path = "lib/tic-tac-toe-rs" }
tiktok = { path = "lib/tiktok-rs" }
time = "0.3.11"
tiny-skia = { version = "0.6.6", features = [ "std", "simd", "png-format" ], default-features = false }
tokio = { version = "1.19.2", features = [ "rt-multi-thread", "signal", "sync", "time", "parking_lot" ] }
tokio-ffmpeg-cli = { path = "./lib/tokio-ffmpeg-cli-rs" }
tokio-stream = "0.1.9"
toml = "0.5.9"
tonic = "0.6.2"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.17.3"
tracing-subscriber = { version = "0.3.14", features = [ "env-filter", "fmt", "parking_lot" ] }
ttf-parser = "0.15.2"
uom = "0.31.1"
urban-dictionary = { path = "./lib/urban-dictionary-rs", default-features = false, features = [ "rustls-tls" ] }
url = "2.2.2"
xkcd = { path = "lib/xkcd-rs", default-features = false, features = [ "rustls-tls" ] }
zalgo = { git = "https://github.com/nathaniel-daniel/zalgo-rs", default-features = false }

# Optional
openssl = { version = "0.10.40", optional = true, features = [ "vendored" ] }

[features]
# Note: This is needed for cross comp
use-openssl-vendored = [ "openssl" ]

[patch.crates-io]
# Fix security advisory.
# heim = { git = "https://github.com/heim-rs/heim", rev = "b292f1535bb27c03800cdb7509fa81a40859fbbb" }
heim = { git = "https://github.com/vectordotdev/heim", branch = "update-nix" }

# `servo_arc` has UB on crates.io. This still has UB, but less and I haven't seen any issues with it yet.
# To fix this, I think https://doc.rust-lang.org/std/mem/fn.size_of_val_raw.html needs to stabilize.
servo_arc = { git = "https://github.com/servo/servo", rev = "490c215798a92aca1468a1767e3cc294f824036c" }

# Fix cross compilation, crates.io songbird does not support it
# songbird = { git = "https://github.com/adumbidiot/songbird", branch = "audiopus-0.3.0" }
# songbird requires serenity:next
serenity = { git = "https://github.com/adumbidiot/serenity", branch = "next" }
songbird = { git = "https://github.com/FelixMcFelix/songbird", branch = "symphonia" }

# Faster gethostname
nix = { git = "https://github.com/nathaniel-daniel/nix", branch = "maybeuninit-gethostname" }

[patch.'https://github.com/serenity-rs/serenity']
serenity = { git = "https://github.com/adumbidiot/serenity", branch = "next" }

# To make image drawing times sane
[profile.dev.package.tiny-skia]
opt-level = 3

# To make image encoding times sane
[profile.dev.package.png]
opt-level = 3

# To make image encoding times sane
[profile.dev.package.miniz_oxide]
opt-level = 3

# To make image encoding times sane
[profile.dev.package.crc32fast]
opt-level = 3

# To make image encoding times sane
[profile.dev.package.deflate]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

# A profile to use `cargo-bloat` with
[profile.release-cargo-bloat]
inherits = "release"
codegen-units = 1
debug = true
opt-level = 3
strip = false

[workspace]
members = [ 
    "lib/fml-rs",
    "lib/nekos-rs", 
    "lib/quizizz-rs",
    "lib/r6stats-rs", 
    "lib/r6tracker-rs", 
    "lib/reddit-tube-rs",
    "lib/rule34-rs",
    "lib/insta-rs",
    "lib/deviantart-rs",
    "lib/urban-dictionary-rs",
    "lib/xkcd-rs",
    "lib/tiktok-rs",
    "lib/open-graph-rs",
    "lib/iqdb-rs",
    "lib/sauce-nao-rs",
    "lib/tic-tac-toe-rs",
    "lib/async-rusqlite-rs",
    "lib/across-rs",
    "lib/pikadick-slash-framework-rs",
    "lib/pikadick-slash-framework-derive-rs",
    "lib/rpi-deploy-rs",
    "lib/tokio-ffmpeg-cli-rs",
    "lib/pikadick-util-rs",
    "lib/pikadick-system-info-rs",
]

[package.metadata.deb]
name = "pikadick"
depends = "ffmpeg"
assets = [
    [ "target/release/pikadick", "usr/bin/", "700" ],
    [ "deb-config.toml", "etc/pikadick/config.toml", "600" ],
]
conf-files = [
    "etc/pikadick/config.toml",
]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
enable = true
start = true

[package.metadata.rpi-deploy]
targets = [ 
    "armv7-unknown-linux-gnueabihf",
    "aarch64-unknown-linux-gnu",
]
