[package]
name = "deviantart"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "deviantart"
path = "src/cli/main.rs"
required-features = [ "cli" ]

[dependencies]
bytes = "1.2.1"
cookie = "0.16.0"
cookie_store = "0.16.1"
itoa = "1.0.2"
once_cell = "1.13.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = [ "cookies", "gzip", "json" ] }
serde = { version = "1.0.140", features = [ "derive" ] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = [ "rt" ] }
thiserror = "1.0.31"
url = { version = "2.2.2", features = [ "serde" ] }

# Optional
argh = { version = "0.1.8", optional = true }
anyhow = { version = "1.0.58", optional = true }
directories-next = { version = "2.0.0", optional = true }
toml = { version = "0.5.9", features = [ "preserve_order" ], optional = true }

[dev-dependencies]
tokio = { version = "1.20.0", features = [ "macros", "fs" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [ 
    "argh",
    "anyhow",
    "directories-next",
    "tokio/fs",
    "tokio/rt-multi-thread",
    "toml",
]
