[package]
name = "fml"
version = "0.0.1"
authors = [ "ProfessionalProgrammers <rusty.bois.bios.rusty@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.13", default-features = false }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
tokio = { version = "1.24.1", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
