[package]
name = "fml"
version = "0.0.1"
authors = [ "ProfessionalProgrammers <rusty.bois.bios.rusty@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.20", default-features = false }
serde = { version = "1.0.188", features = [ "derive" ] }
serde_json = "1.0.107"
thiserror = "1.0.48"

[dev-dependencies]
tokio = { version = "1.32.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
