[package]
name = "insta"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "insta"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
cookie_store = "0.22.0"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = [ "cookies", "gzip", "json" ], default-features = false }
reqwest_cookie_store = "0.9.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
thiserror = "2.0.17"
url = { version = "2.5.7", features = [ "serde" ] }

# Optional
argh = { version = "0.1.13", optional = true }
anyhow = { version = "1.0.100", optional = true }
directories-next = { version = "2.0.0", optional = true }
tokio = { version = "1.48.0", optional = true }
toml_edit = { version = "0.23.7", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros", "parking_lot" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [
    "argh",
    "anyhow",
    "directories-next",
    "tokio",
    "tokio/rt-multi-thread",
    "tokio/fs",
    "toml_edit",
]
