[package]
name = "iqdb"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "iqdb"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", default-features = false, features = [ "multipart", "stream" ] }
scraper = { version = "0.18.1", default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = [ "fs", "rt" ] }
tokio-util = { version = "0.7.10", features = ["codec"] }
url = "2.5.0"

# Optional
anyhow = { version = "1.0.79", optional = true }
argh = { version = "0.1.12", optional = true }

[dev-dependencies]
tokio = { version = "1.35.1", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [
    "anyhow",
    "argh",
    "tokio/rt-multi-thread",
]
