[package]
name = "iqdb"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "iqdb"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.12.24", default-features = false, features = [ "multipart", "stream" ] }
scraper = { version = "0.24.0", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "fs", "rt" ] }
tokio-util = { version = "0.7.16", features = ["codec"] }
url = "2.5.7"

# Optional
anyhow = { version = "1.0.100", optional = true }
argh = { version = "0.1.13", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [
    "anyhow",
    "argh",
    "tokio/rt-multi-thread",
]
