[package]
name = "nekos"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nekos"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
itoa = "1.0.10"
reqwest = { version = "0.11.23", default-features = false, features = [ "json" ] }
serde = { version = "1.0.195", features = [ "derive" ] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = [ "io-util" ] }
url = "2.5.0"

# Optional
argh = { version = "0.1.12", optional = true }
anyhow = { version = "1.0.79", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-path" ], optional = true }

[dev-dependencies]
tokio = { version = "1.35.1", features = [ "macros" ] }

[features]
default = [ "reqwest/rustls-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [
    "argh",
    "anyhow",
    "nd-util",
    "tokio/fs",
    "tokio/rt-multi-thread",
]
