[package]
name = "nekos"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nekos"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
itoa = "1.0.15"
reqwest = { version = "0.12.24", default-features = false, features = [ "json" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "io-util" ] }
url = "2.5.7"

# Optional
argh = { version = "0.1.13", optional = true }
anyhow = { version = "1.0.100", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-path" ], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros" ] }

[features]
default = [ "reqwest/rustls-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [
    "argh",
    "anyhow",
    "nd-util",
    "tokio/fs",
    "tokio/rt-multi-thread",
]
