[package]
name = "open-ai"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.24", features = [ "json" ], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
once_cell = "1.19.0"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros"] }

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
