[package]
name = "open-ai"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.23", features = [ "json" ], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"

[dev-dependencies]
once_cell = "1.21.3"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros"] }

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
