[package]
name = "open-graph"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "open-graph"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
scraper = { version = "0.17.1", default-features = false }
thiserror = "1.0.48"
url = "2.4.1"

# Optional
anyhow = { version = "1.0.75", optional = true }
argh = { version = "0.1.12", optional = true }
reqwest = { version = "0.11.20", default-features = false, optional = true }
tokio = { version = "1.32.0", optional = true }

[features]
default = []
client = [
    "reqwest",
    "tokio",
    "tokio/rt",
]

client-default-tls = [
    "client",
    "reqwest/default-tls"
]

client-native-tls = [
    "client",
    "reqwest/native-tls"
]

client-rustls-tls = [
    "client",
    "reqwest/rustls-tls"
]

cli = [ 
    "anyhow",
    "argh",
    "client",
    "tokio/rt-multi-thread",
    "tokio/fs",
]
