[package]
name = "open-graph"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "open-graph"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
scraper = { version = "0.24.0", default-features = false }
thiserror = "2.0.16"
url = "2.5.4"

# Optional
anyhow = { version = "1.0.99", optional = true }
argh = { version = "0.1.13", optional = true }
reqwest = { version = "0.12.23", default-features = false, optional = true }
tokio = { version = "1.47.1", optional = true }

[features]
default = []
client = [
    "reqwest",
    "tokio",
    "tokio/rt",
]

client-default-tls = [
    "client",
    "reqwest/default-tls"
]

client-native-tls = [
    "client",
    "reqwest/native-tls"
]

client-rustls-tls = [
    "client",
    "reqwest/rustls-tls"
]

cli = [ 
    "anyhow",
    "argh",
    "client",
    "tokio/rt-multi-thread",
    "tokio/fs",
]
